[package]
name = "mock-engine-store"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "mock_engine_store"

[features]
default = ["protobuf-codec", "testexport"]
protobuf-codec = [
  "protobuf/bytes",
  "kvproto/protobuf-codec",
]
testexport = ["raftstore/testexport", "tikv/testexport"]
jemalloc = ["rocksdb/jemalloc"]
portable = ["rocksdb/portable"]
failpoints = ["fail/failpoints"]

[dependencies]
fail = "0.5"
tikv = { path = "../../contrib/tikv", default-features = false }
test_raftstore = { path = "../../contrib/tikv/components/test_raftstore" }
server = { path = "../../contrib/tikv/components/server" }
raftstore = { path = "../../contrib/tikv/components/raftstore", default-features = false }
protobuf = "2.8.0"
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
tikv_util = { path = "../../contrib/tikv/components/tikv_util", default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
engine_traits = { path = "../../contrib/tikv/components/engine_traits", default-features = false }
engine_rocks = { path = "../../contrib/tikv/components/engine_rocks", default-features = false }
keys = { path = "../../contrib/tikv/components/keys", default-features = false }
raftstore_proxy = { path = "../raftstore_proxy", default-features = false }
engine_tiflash = { path = "../engine_tiflash", default-features = false }
engine_store_ffi = { path = "../engine_store_ffi", default-features = false }
encryption = { path = "../../contrib/tikv/components/encryption", default-features = false }
test_util = { path = "../../contrib/tikv/components/test_util", default-features = false }
tempfile = "3.0"
file_system = { path = "../../contrib/tikv/components/file_system", default-features = false }
encryption_export = { path = "../../contrib/tikv/components/encryption/export", default-features = false }
collections = { path = "../../contrib/tikv/components/collections", default-features = false }

raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
concurrency_manager = { path = "../../contrib/tikv/components/concurrency_manager", default-features = false }
resource_metering = { path = "../../contrib/tikv/components/resource_metering" }
crossbeam = "0.8"
rand = "0.8"

futures = "0.3"
tokio = { version = "1.5", features = ["rt-multi-thread"]}
grpcio = { version = "0.10",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
pd_client = { path = "../../contrib/tikv/components/pd_client", default-features = false }
txn_types = { path = "../../contrib/tikv/components/txn_types", default-features = false }
resolved_ts = { path = "../../contrib/tikv/components/resolved_ts" }
security = { path = "../../contrib/tikv/components/security", default-features = false }
api_version = { path = "../../contrib/tikv/components/api_version" }
proxy_core = { path = "../proxy_core", default-features = false }

[dependencies.rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"
package = "rocksdb"
features = ["encryption"]