[package]
name = "proxy_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "proxy_core"

[dependencies]
# Specify version
async-trait = "0.1"
http = "0.2.0"
hyper = "0.14"
hyper-tls = "0.5"
time = "0.1"
num_cpus = "1"
prometheus-static-metric = "0.5"
fs2 = "0.4"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
tempfile = "3.0"
lazy_static = "1.3"
clap = "2.32"
futures = "0.3"
toml = "0.5"
fail = "0.5"
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
itertools = "0.10"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
protobuf = { version = "2.8", features = ["bytes"] }
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored"] }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
prometheus = { version = "0.13", features = ["nightly"] }

# Use Cargo.lock for version control
kvproto = { git = "https://github.com/pingcap/kvproto.git" }

# Use git commit for version control
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }

# Use path
raft_log_engine = { path = "../../contrib/tikv/components/raft_log_engine", default-features = false }
api_version = { path = "../../contrib/tikv/components/api_version", default-features = false }
keys = { path = "../../contrib/tikv/components/keys", default-features = false }
encryption = { path = "../../contrib/tikv/components/encryption", default-features = false }
tikv = { path = "../../contrib/tikv" }
raftstore = { path = "../../contrib/tikv/components/raftstore", default-features = false }
sst_importer = { path = "../../contrib/tikv/components/sst_importer", default-features = false }
encryption_export = { path = "../../contrib/tikv/components/encryption/export", default-features = false }
server = { path = "../../contrib/tikv/components/server" }
engine_traits = { path = "../../contrib/tikv/components/engine_traits", default-features = false }
engine_rocks = { path = "../../contrib/tikv/components/engine_rocks", default-features = false }
engine_test = { path = "../../contrib/tikv/components/engine_test", default-features = false }
engine_tiflash = { path = "../engine_tiflash", default-features = false }
tikv_util = { path = "../../contrib/tikv/components/tikv_util", default-features = false }
file_system = { path = "../../contrib/tikv/components/file_system", default-features = false }
cdc = { path = "../../contrib/tikv/components/cdc", default-features = false }
pd_client = { path = "../../contrib/tikv/components/pd_client", default-features = false }
error_code = { path = "../../contrib/tikv/components/error_code", default-features = false }
concurrency_manager = { path = "../../contrib/tikv/components/concurrency_manager", default-features = false }
security = { path = "../../contrib/tikv/components/security", default-features = false }
resource_metering = { path = "../../contrib/tikv/components/resource_metering" }
tikv_alloc = { path = "../../contrib/tikv/components/tikv_alloc" }
resolved_ts = { path = "../../contrib/tikv/components/resolved_ts", default-features = false }
causal_ts = { path = "../../contrib/tikv/components/causal_ts" }
backup = { path = "../../contrib/tikv/components/backup", default-features = false }
online_config = { path = "../../contrib/tikv/components/online_config" }
engine_store_ffi = { path = "../engine_store_ffi", default-features = false }

